Se ha realizado el footer con las patas

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,6 +30,9 @@
                 <p>
                     Esta linea es adicional
                 </p>
+            </div>
+            <div id="footer">
+                Hecho con las patas XD
             </div>
         </div>
     </body>
